--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,18 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_blue_plus: ^1.32.1
+  flutter_blue_plus: ^1.32.12
   permission_handler: ^11.3.1
+  get: ^4.3.8
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+
   flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
